[gd_scene load_steps=4 format=3 uid="uid://bn8m7fadj4tu1"]

[ext_resource type="Script" path="res://scene/ui/board_hud.gd" id="1_8mne0"]
[ext_resource type="PackedScene" uid="uid://cb67trj45r7wr" path="res://scene/ui/board/hud/player_summary_item.tscn" id="2_gyqxh"]
[ext_resource type="PackedScene" uid="uid://dje0v6ye77maq" path="res://scene/ui/board/hud/player_information.tscn" id="2_lcajx"]

[node name="BoardHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8mne0")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -53.0
offset_bottom = 31.0
grow_horizontal = 0
text = "Menu"

[node name="Actions" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="RollDiceBtn" type="Button" parent="Actions"]
layout_mode = 2
text = "Roll Dice"

[node name="TradeBtn" type="Button" parent="Actions"]
layout_mode = 2
text = "Trade"

[node name="EndRoundBtn" type="Button" parent="Actions"]
layout_mode = 2
text = "End Round"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_right = 202.0
offset_bottom = 116.0

[node name="PlayerSummary" parent="VBoxContainer" instance=ExtResource("2_gyqxh")]
layout_mode = 2

[node name="PlayerSummary2" parent="VBoxContainer" instance=ExtResource("2_gyqxh")]
layout_mode = 2

[node name="PlayerInformation" parent="." instance=ExtResource("2_lcajx")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_right = 0.0
grow_horizontal = 1
grow_vertical = 0

[connection signal="pressed" from="Actions/RollDiceBtn" to="." method="_on_roll_dice_btn_pressed"]
